[package]
authors = ["akash <akashgurava@outlook.com>"]
edition = "2018"
name = "deckterra"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
http = "0.2.3"
lazy_static = "1.4.0"
reqwest = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7.0"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}
url = "2.2.0"
