[package]
authors = ["akash <akashgurava@outlook.com>"]
edition = "2018"
name = "deckterra"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "time"]}
