[package]
authors = ["akash <akashgurava@outlook.com>"]
edition = "2018"
name = "deckterra"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "time"]}
tokio-stream = "0.1"
tower = {version = "0.4.3", features = ["retry", "limit", "util"]}
typed-builder = "0.8"

[dev-dependencies]
wiremock = "0.4"
